# Spool

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-COMMERCIAL.md  README.md  TODO.md  package-lock.json  package.json
.claude/skills/spool-cli/: SKILL.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
openspec/: ROADMAP.md  config.yaml
openspec/changes/add-file-import/: proposal.md
openspec/changes/add-full-resolution-preview/: proposal.md
openspec/changes/add-raw-support/: proposal.md
openspec/changes/add-settings-page/: proposal.md
openspec/changes/setup-ci-cd/: proposal.md
openspec/specs/cf-import/: spec.md
openspec/specs/ci-cd/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/core-features/: spec.md
openspec/specs/file-import/: spec.md
openspec/specs/file-write/: spec.md
openspec/specs/licensing/: spec.md
openspec/specs/map-integration/: spec.md
openspec/specs/metadata-formats/: spec.md
openspec/specs/settings/: spec.md
openspec/specs/tech-stack/: spec.md
openspec/specs/thumbnail-cache/: spec.md
scripts/: build-cli.sh
spool-cli/: Cargo.toml
spool-cli/src/: main.rs
spool-cli/tests/: cli_test.rs
spool-core/: Cargo.toml
spool-core/src/: exif.rs  lib.rs  metadata.rs  xmp.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cf_import.rs  decode.rs  exif.rs  iptc.rs  lib.rs  metadata.rs  preview.rs  settings.rs  thumbnail.rs
src/lib/components/: CfImport.svelte  MapPicker.svelte  PhotoPreview.svelte  (+1 more)
src/routes/: +page.svelte
(+49 files in other folders)
