[package]
name = "spool"
version = "1.1.0"
description = "Cross-platform photo EXIF editor for film photographers"
authors = ["WanliSha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
spool-core = { path = "../spool-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tauri-plugin-dialog = "2.6.0"
dirs = "6.0.0"
sha2 = "0.10.9"
base64 = "0.22.1"
little_exif = "0.6.23"
tauri-plugin-http = "2.5.7"
rawler = "0.7.2"

